Sprint 12 hw.